--- a/index.html
+++ b/index.html
@@ -44,8 +44,15 @@
 	<!-- <p style="text-align: justify; text-indent: 50px"> Arrumar o espaço da pagina de acordo com o tamanho do texto , porém isso esta errado pois terá que copiar tudo dnv e ir indo copiando e colando para todos os outros parágrafos -->
 	<p>O Google Glass é um <em>acessório</em> em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
 	<!-- <em> da importância ao acessório e o <i> so dá um 'destaque' na palavra --> 
-	[AQUI ENTRA UMA FOTO]
-
+	
+	<figure class="foto-legenda">	<!--< legenda para a imagem-->
+		<img id="fundo" src="_imagens/glass-quadro-homem-mulher.jpg"/> </img> 
+		<figcaption>
+			<h3>Google Glass</h3>
+			<p>Uma nova maneira de ver o mundo</p>
+		</figcaption>	
+	</figure>
+	
 	<h2>Data de lançamento</h2>
 	<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
