--- a/index.html
+++ b/index.html
@@ -25,13 +25,16 @@
 	A revolução do Google está chegando
 
 	[AQUI ENTRA UMA FOTO]
-
-	Menu Principal
-	- Home
-	- Especificações
-	- Fotos
-	- Multimídia
-	- Fale conosco
+	<!--li: Organiza da forma mais próxima possível de uma lista./ol pode ser lista de numeros/caracteres./ul por exemplo , quadrados,bolas etc.-->
+	<h1>Menu Principal</h1>
+	<!--ol type ="A"(a,b,c,d)/ start = "c"(c,e,f,g) and ul type ="square"/"circle" -->
+	<ul type="square">
+		<li>Home</li>
+		<li>Especificações</li>
+		<li>Fotos</li>
+		<li>Multimídia</li>
+		<li>Fale conosco</li>
+ 	</ul>
  	</header>
 
 	<h3>Tecnologia > Inovações</h3>
