--- a/index.html
+++ b/index.html
@@ -11,82 +11,85 @@
 </head>
 <body>
 	<!-- comentários -->
-	<!-- tag de cabeçario <header> -->
-	<header id="cabecalho"> <!-- header id = "cabecalho" serve para identificar o seu cabeçario -->
 	<div id="interface">
+		<!-- tag de cabeçario <header> -->
+		<header id="cabecalho"> <!-- header id = "cabecalho" serve para identificar o seu cabeçario -->
+		
 		<h1>Google Glass</h1> <!--h1 é um tipo de título de importância 1-->
 		<h2>A revolução do Google está chegando</h2> <!-- h2 é um subtítulo -->
 
-	<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/> </img>
-	<!-- <div> divisão .. a cada pedaço/assunto de site é bom dividir pelo div e por exemplo se quiser fazer duas partes do site coloque dois divs. -->
-	<!-- <div id interface>: serve para identificar a div expecífica. -->
+		<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/> </img>
+		<!-- <div> divisão .. a cada pedaço/assunto de site é bom dividir pelo div e por exemplo se quiser fazer duas partes do site coloque dois divs. -->
+		<!-- <div id interface>: serve para identificar a div expecífica. -->
+
+		<!--li: Organiza da forma mais próxima possível de uma lista./ol pode ser lista de numeros/caracteres./ul por exemplo , quadrados,bolas etc.-->
+		<nav id="menu">
+		<h1>Menu Principal</h1>
+		<!--ol type ="A"(a,b,c,d)/ start = "c"(c,e,f,g) and ul type ="square"/"circle" -->
+		<ul type="circle">
+			<li><a href="index.html">Home</a></li>
+			<li><a href="specs.html">Especificações</a></li>
+			<li><a href="fotos.html">Fotos</a></li>
+			<li><a href="multimida.html">Multimídia</a></li>
+			<li><a href="fale-conosco.html">Fale conosco</a></li>
+	 	<!-- <a href="..."> serve para deixar esses tópicos como um link e quando clicar, abrirá a parte selecionada com suas infos. -->
+	 	</ul>
+	 	</nav>
+	 </header>
+
+	 	<!-- <a href="http://glass.google.com" target="_blank">
+	 	Projeto google Glass</a> -->
+
+		<h3>Tecnologia > Inovações</h3>
+		<h1>Saiba tudo sobre o Google Glass</h1>
+		<h2>por Lucas Mucida Costa</h2>
+		<h3>Atualizado em 23/Fevereiro/2016</h3>
+
+		<!--No título usa H2 e no parágrafo use P -->
+		<h2>O que é</h2>
+		<!-- <p style="text-align: justify; text-indent: 50px"> Arrumar o espaço da pagina de acordo com o tamanho do texto , porém isso esta errado pois terá que copiar tudo dnv e ir indo copiando e colando para todos os outros parágrafos -->
+		<p>O Google Glass é um <em>acessório</em> em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
+		<!-- <em> da importância ao acessório e o <i> so dá um 'destaque' na palavra --> 
 		
-	Google Glass
-	A revolução do Google está chegando
+		<figure class="foto-legenda">	<!--< legenda para a imagem-->
+			<img id="fundo" src="_imagens/glass-quadro-homem-mulher.jpg"/> </img> 
+			<figcaption>
+				<h3>Google Glass</h3>
+				<p>Uma nova maneira de ver o mundo</p>
+			</figcaption>	
+		</figure>
+		
+		<h2>Data de lançamento</h2>
+		<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-	[AQUI ENTRA UMA FOTO]
-	<!--li: Organiza da forma mais próxima possível de uma lista./ol pode ser lista de numeros/caracteres./ul por exemplo , quadrados,bolas etc.-->
-	<h1>Menu Principal</h1>
-	<!--ol type ="A"(a,b,c,d)/ start = "c"(c,e,f,g) and ul type ="square"/"circle" -->
-	<ul type="square">
-		<li>Home</li>
-		<li>Especificações</li>
-		<li>Fotos</li>
-		<li>Multimídia</li>
-		<li>Fale conosco</li>
- 	</ul>
- 	</header>
+		Especificações Técnicas
+		Tabela Técnica do Google Glass Mar/2013
 
-	<h3>Tecnologia > Inovações</h3>
-	<h1>Saiba tudo sobre o Google Glass</h1>
-	<h2>por Lucas Mucida Costa</h2>
-	<h3>Atualizado em 23/Fevereiro/2016</h3>
+		Tela:Resolução equivalente a tela de 25"
+		Camera: 5MP para fotos / 720p para vídeos
+		Conectividade: Wi-Fi/ Bluetooth
+		Memória Interna: 12GB
 
-	<!--No título usa H2 e no parágrafo use P -->
-	<h2>O que é</h2>
-	<!-- <p style="text-align: justify; text-indent: 50px"> Arrumar o espaço da pagina de acordo com o tamanho do texto , porém isso esta errado pois terá que copiar tudo dnv e ir indo copiando e colando para todos os outros parágrafos -->
-	<p>O Google Glass é um <em>acessório</em> em forma de óculos que possibilita a interação dos usuários com diversos conteúdos em realidade aumentada. Também chamado de Project Glass, o eletrônico é capaz de tirar fotos a partir de comandos de voz, enviar mensagens instantâneas e realizar vídeoconferências. Seu lançamento está previsto para 2014, e seu preço deve ser de US$ 1,5 mil. Atualmente o Google Glass encontra-se em fase de testes e já possui um vídeo totalmente gravado com o dispositivo. Além disso, a companhia de buscas registrou novas patentes anti-furto e de desbloqueio de tela para o acessório.</p>
-	<!-- <em> da importância ao acessório e o <i> so dá um 'destaque' na palavra --> 
-	
-	<figure class="foto-legenda">	<!--< legenda para a imagem-->
-		<img id="fundo" src="_imagens/glass-quadro-homem-mulher.jpg"/> </img> 
-		<figcaption>
-			<h3>Google Glass</h3>
-			<p>Uma nova maneira de ver o mundo</p>
-		</figcaption>	
-	</figure>
-	
-	<h2>Data de lançamento</h2>
-	<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
+		<h2>Como funciona</h2>
+		<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
 
-	Especificações Técnicas
-	Tabela Técnica do Google Glass Mar/2013
+		<h2>O que você pode fazer com o Google Glasses</h2>
+		<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
-	Tela:Resolução equivalente a tela de 25"
-	Camera: 5MP para fotos / 720p para vídeos
-	Conectividade: Wi-Fi/ Bluetooth
-	Memória Interna: 12GB
+		[AQUI ENTRA UM VÍDEO]
 
-	<h2>Como funciona</h2>
-	<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
+		Outras Notícias
+		Vídeo mais recente
 
-	<h2>O que você pode fazer com o Google Glasses</h2>
-	<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
+		[AQUI ENTRA UM VÍDEO]
 
-	[AQUI ENTRA UM VÍDEO]
+		<h2>Novidades no Glass</h2>
+		<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
 
-	Outras Notícias
-	Vídeo mais recente
+		<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
 
-	[AQUI ENTRA UM VÍDEO]
-
-	<h2>Novidades no Glass</h2>
-	<p>O Google enfim revelou as especificações completas do Google Glass, e com ele uma surpresa ainda inédita no mercado: a gigante das buscas usará um sistema de áudio baseado na transdução por condução. Através das hastes dos óculos, o som será transmitido para o ouvido do usuário por meio de microvibrações em determinados ossos de sua cabeça, sem usar nenhum tipo de alto-falante.</p>
-
-	<p>Além da surpresa do áudio, a tela montada a frente do olho do usuário também chamou atenção. Serão 640 x 360 pixels de resolução que, em proporção, equivaleria a um monitor de 25 polegadas de alta definição colocado a 2,5 metros de distância do espectador.</p>
-
-	Copyright 2016 - by Lucas Mucida
-	Facebook | Twitter
-	</div>
+		Copyright 2016 - by Lucas Mucida
+		Facebook | Twitter
+		</div>
 <body>
 <html>
