--- a/index.html
+++ b/index.html
@@ -40,12 +40,13 @@
 	 <section id="corpo">
 	 	<!-- <a href="http://glass.google.com" target="_blank">
 	 	Projeto google Glass</a> -->
-
-		<h3>Tecnologia > Inovações</h3>
-		<h1>Saiba tudo sobre o Google Glass</h1>
-		<h2>por Lucas Mucida Costa</h2>
-		<h3>Atualizado em 23/Fevereiro/2016</h3>
-
+	 <article id="noticia-principal"> 
+		 	<header id="cabecalho-artigo">
+			<h3>Tecnologia > Inovações</h3>
+			<h1>Saiba tudo sobre o Google Glass</h1>
+			<h2>por Lucas Mucida Costa</h2>
+			<h3 class="direita">Atualizado em 23/Fevereiro/2016</h3>
+			</header>
 		<!--No título usa H2 e no parágrafo use P -->
 		<h2>O que é</h2>
 		<!-- <p style="text-align: justify; text-indent: 50px"> Arrumar o espaço da pagina de acordo com o tamanho do texto , porém isso esta errado pois terá que copiar tudo dnv e ir indo copiando e colando para todos os outros parágrafos -->
@@ -63,13 +64,14 @@
 		<h2>Data de lançamento</h2>
 		<p>Não há uma data específica e oficial para o dispositivo ser lançado, ainda. Pode ser que ele esteja disponível em demonstrações a partir de 2013, mas seu lançamento para as lojas fica para, pelo menos, 2014.</p>
 
-		Especificações Técnicas
-		Tabela Técnica do Google Glass Mar/2013
-
-		Tela:Resolução equivalente a tela de 25"
-		Camera: 5MP para fotos / 720p para vídeos
-		Conectividade: Wi-Fi/ Bluetooth
-		Memória Interna: 12GB
+		<h1>Especificações Técnicas</h1>
+		<table id="tabelaSpec">	
+			<caption>Tabela Técnica do Google Glass <span>Mar/2013</span></caption> <!--TR - cria linhas de uma tabela./TD -  criar colunas de uma tabela-->
+			<tr><td class="ce">Tela</td><td class="cd">Resolução equivalente a tela de 25"</td></tr>
+			<tr><td class="ce" rowspan="2">Camera</td><td class="cd"> 5MP para fotos</td></tr> <tr><td class="cd">720p para vídeos</td></tr>
+			<tr><td class="ce">Conectividade</td><td class="cd"> Wi-Fi/ Bluetooth</td></tr>
+			<tr><td class="ce">Memória Interna</td><td class="cd">  12GB</td></tr>
+		</table>
 
 		<h2>Como funciona</h2>
 		<p>De acordo com fontes próximas do Google, os óculos vão contar com uma pequena tela de LCD ou AMOLED na parte superior e em frente aos olhos do usuário. Com o uso de uma câmera e GPS, você pode se situar, assim como selecionar opções com o movimento da cabeça</p>
@@ -77,6 +79,7 @@
 		<h2>O que você pode fazer com o Google Glasses</h2>
 		<p>O vídeo de divulgação do Google mostra que você pode se transformar em uma espécie de “super-humano”, já que o aparelho pode indicar a quantos metros você está de seu destino, se o metrô está aberto ou fechado, mostrar o clima, agenda e até mesmo permitir que você marque encontros apenas com comandos de voz.</p>
 
+	</article>
 		[AQUI ENTRA UM VÍDEO]
 	</section>
 	<aside id="lateral">
