--- a/specs.html
+++ b/specs.html
@@ -1,3 +1,6 @@
+<link rel="stylesheet" type="text/css" href="_css/estilo.css">
+<link rel="stylesheet" type="text/css" href="_css/spec.css">
+
 Google Glass
 A revolução do Google está chegando
 
@@ -10,14 +13,109 @@ Menu Principal
 - Multimídia
 - Fale conosco
 
-Glass > Especificações
-Raio-X no Google Glass
-por Lucas Mucida
-Atualizado em 23/Fevereiro/2016
+<section id="corpo-full">
+		<article id="noticia-princial">
+			<header id="cabecalho-artigo">
+				<hgroup>
+					<h3>Glass > Especificações</h3>
+					<h1>Raio-X no Google Glass</h1>
+					<h2>por Lucas Mucida</h2>
+					<h3 class="direita">Atualizado em 23/Fevereiro/2016</h3>
+				</hgroup>
+			</header>
 
-Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.
 
+<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+		
+	<section id="conteudo">
+		<img src="_imagens/glass-esquema-marcado.jpg" usemap="meuMapa">
+		<iframe src="google-glass.html" name="janela" id="frame-spec" scrolling="no"></iframe>	
+		<!--iframe-uma tag que voce fala a fonte do que vai ser mostrado ali dentro.-->
+		<map name="meuMapa"> 
+			<area shape="rect" coords="179,209,267,257" href="">
+			<area shape="circle" coords="179,209,267,257" href="">
+		</map>
+	</section>
+
+		</article>
+	</section>
+		<footer id="rodape">
+			<p>Copyright 2016 - by Lucas Mucida</p>
+			<p><a href="https://facebook.com/lucas.mucidacosta" target="_blank">Facebook</a>
+			<a href="https:">
+			
+
+
+
+Facebook | Twitter
+
+<!-- <meta charset="utf-8" lang="pt-br"/> 			
+	<link rel="stylesheet" type="text/css" href="_css/estilo.css">
+	<title>Tudo sobre Gloogle Glass</title>
+</head>
+<script language="javascript" src="_javascript/funcoes.js"></script>
+
+<body>
+<div id="interface"> 						
+
+	<header id="cabecalho"> 
+			<hgroup>						
+			<h1>Google Glass</h1>					
+			<h2>A revolução do Google está chegando</h2>
+		</hgroup>
+		<img id="icone" src="_imagens/glass-oculos-preto-peq.png"/> 
+		
+		<nav id="menu">
+		<h1>Menu Principal</h1>
+
+		<ul type ="circle">  
+		<li onmouseover="mudaFoto('_imagens/home.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="index.html">Home</a></li>
+		<li onmouseover="mudaFoto('_imagens/especificacoes.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="spacs.html">Especificações</a></li>
+		<li onmouseover="mudaFoto('_imagens/fotos.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fotos.html">Fotos</a></li>
+		<li onmouseover="mudaFoto('_imagens/multimidia.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="Multimídia.html">multimidia</a></li>
+		<li onmouseover="mudaFoto('_imagens/contato.png')" onmouseout="mudaFoto('_imagens/glass-oculos-preto-peq.png')"><a href="fale-conosco.html">fale conosco</a></li>
+	  </ul>
+	</nav>
+	</header>
+	<section id ="corpo-full">
+	<article id="noticia-principal"> 
+		<header id="cabecalho-artigo">	
+		<h3>Glass > Especificações</h3>
+		<h1>Raio-x no Google Glass</h1>
+		<h2>por Vitor Bordoni</h2>
+		<h3 class="direita"> Atualizado em 20/Fevereiro/2016</h3>
+	</hgroup>
+		</header>
+
+Google Glass
+A revolução do Google está chegando
+
+
+
+</article>
+</section>
+
+
+
+<p>Clique em qualquer área destacada da imagem para ter mais informações sobre os recursos do Google Glass. Qualquer ponto vermelho vai te levar a um lugar cheio de novas informações.</p>
+<section id="rodape">
+	<img src="_imagens/glass-esquema-marcado.jpg" usemap="meuMapa">
+	<iframe src="google-glass.html" name="janela" id="frame-spac" scrolling="no">
+	</iframe>
+
+<map name="meuMapa">	
+	<area shape="rect" coords="179,209,267,257" target="janela" href="google-glass.html#tela">
+	<area shape="circle" coords="158,243,12" target="janela" href="google-glass.html#camera">
+	<area shape="circle" coords="73,52,12" target="janela" href="google-glass.html#bateria">
+	<area shape="polly" coords="28,145,82,215,25,166" target="janela" href="google-glass.html#sensor">
+
+</map>
+
+</section>
+</article>
+</section>
+<footer id="rodape">
 [AQUI ENTRA UMA IMAGEM]
 
 Copyright 2016 - by Lucas Mucida<
-Facebook | Twitter
+Facebook | Twitter -->
